--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-# Ignore all __pycache__ folders anywhere
+# Ignore all __pycache__ folders anywhere!
 **/__pycache__/
 
-# Ignore all virtual environments (named venv) anywhere
+# Ignore all virtual environments (named venv) anywhere!
 **/venv/
 
-# Ignore any test folders
+# Ignore any test folders!
 **/test/
 
-# Ignore Python bytecode files
+# Ignore Python bytecode files!
 *.pyc
 
-# Ignore .env files
+# Ignore .env files!
 *.env
 
-# Ignore session files (like SQLite or VS Code sessions)
+# Ignore session files (like SQLite or VS Code sessions)!
 *.session
 *.session-journal
 
-# Ignore your local test script
+# Ignore your local test script!
 test.py
